# torchdrum-plugin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
assets/: CMakeLists.txt
modules/: CMakeLists.txt
scripts/: ableton_debugging_osx.sh  prepare_plugin_release.sh
source/: .clang-format  Biquad.cpp  Biquad.h  CMakeLists.txt  DrumSynth.cpp  DrumSynth.h  EnvelopeFollower.h  FeatureExtraction.cpp  FeatureExtraction.h  NeuralNetwork.cpp  NeuralNetwork.h  OnsetDetection.cpp  OnsetDetection.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthBase.h  SynthController.cpp  SynthController.h  SynthParameterBase.h  TorchDrumLib.cpp  TorchDrumLib.h  WaveformFIFO.cpp  WaveformFIFO.h
source/FeatureExtraction/: FeatureExtraction.cpp  FeatureExtraction.h  FeatureValue.h  SpectralExtractor.h
source/GUI/: ButtonControlComponent.cpp  ButtonControlComponent.h  ButtonLookAndFeel.cpp  ButtonLookAndFeel.h  CMakeLists.txt  DualKnobComponent.cpp  DualKnobComponent.h  FeatureVisualizer.cpp  FeatureVisualizer.h  GlobalControlComponent.cpp  GlobalControlComponent.h  KnobComponent.cpp  KnobComponent.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  OnsetControlComponent.cpp  OnsetControlComponent.h  OnsetVisualizer.cpp  OnsetVisualizer.h  PluginEditorDev.cpp  PluginEditorDev.h  SliderParameterComponent.cpp  SliderParameterComponent.h  SynthControlComponent.cpp  SynthControlComponent.h  SynthControlKnobRow.cpp  SynthControlKnobRow.h  TorchDrumInterface.cpp  TorchDrumInterface.h  TorchDrumStyle.cpp  TorchDrumStyle.h  VisualizerComponent.cpp  VisualizerComponent.h
source/Synth/: CMakeLists.txt  DrumSynth.cpp  DrumSynth.h  DrumSynthParameters.h  Snare808.cpp  Snare808.h  Snare808Parameters.h  SynthParameterBase.h
source/Synth/Modules/: Noise.h  SinusoidalOscillator.cpp  Tonal.h
source/Utils/: NeuralNetworkMock.cpp  NeuralNetworkMock.h
source/synth/: DrumSynth.cpp  DrumSynth.h  DrumSynthParameters.h  SynthParameterBase.h
source/synth/modules/: SinusoidalOscillator.cpp  SinusoidalOscillator.h
test/: conftest.py  requirements.txt  test_drum_synth_parameters.py  test_feature_extraction.py  test_neural_network.py  test_onset_detection.py  test_spectral_extractor.py  test_synth_controller.py
(+2 files in other folders)
